[package]
name = "quicfs-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
x509-parser = { workspace = true }
dirs = { workspace = true }
rcgen = { workspace = true }
