[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "test-harness"
path = "src/main.rs"

[dependencies]
quicfs-common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
rcgen = { workspace = true }
quicfs-client = { path = "../client" }
quicfs-server = { path = "../server" }
tempfile = "3"
